# accela-transformer

./: . docsifytopdfrc.js  .clang-format  .gitignore  CMakeLists.txt  NOTES  README.md  SAMPLE.md  _glossary.md  _sidebar.md  index.html  package-lock.json  package.json  system.md
_assets/benchmark_results/: reduction_amd_epic.csv
_assets/style/: prism.css  prism.js
scripts/: gen_markdown_snippets.py  machine_setup.sh  timing_expr.py
scripts/machine_setup/: scaling_governor.sh
softmax/: CMakeLists.txt  config.hpp  cpp_naive.cpp  cpp_simd_openmp.cpp  cpp_simd_xsimd.cpp  cpp_xtensor.cpp  main.cpp  naive.py  robocode_naive.cpp  robocode_vectorized.cpp  softmax_cpp_simd_openmp.hpp  softmax_cpp_simd_xsimd.hpp  softmax_naive.py  softmax_robocode_naive.hpp  softmax_vectorized.py
src/batched_softmax/: CMakeLists.txt  _index.md  accera_naive.cpp  accera_vectorized.cpp  accera_vectorized_fused.cpp  config.hpp  cpp_naive.cpp  cpp_naive.md  cpp_simd_openmp.cpp  cpp_simd_openmp.md  cpp_simd_xsimd.cpp  cpp_simd_xsimd.md  cpp_xtensor.cpp  naive.md  naive.py  python.py  pytorch.cpp  robocode_naive.cpp  robocode_vectorized.cpp  vectorized.md  vectorized.py  vectorized_fused.md  vectorized_fused.py
src/parallel_batched_softmax/: CMakeLists.txt  accera_naive.cpp  accera_vectorized.cpp  config.hpp  cpp_naive.cpp  cpp_simd_openmp.cpp  cpp_simd_xsimd.cpp  robocode_naive.cpp  robocode_vectorized.cpp  vectorized.py
src/reduction/: CMakeLists.txt  _index.md  _sidebar.md  accera_naive.cpp  accera_parallized.cpp  accera_vectorized.cpp  benchmark.md  config.hpp  cpp_naive.cpp  cpp_naive.md  cpp_simd_openmp.cpp  cpp_simd_openmp.md  cpp_simd_xsimd.cpp  cpp_simd_xsimd.md  memcpy.cpp  naive.drawio  naive.md  naive.py  parallized.py  robocode_naive.cpp  robocode_parallized.cpp  robocode_vectorized.cpp  tree_reduction.py  vectorized.md  vectorized.py
src/scaled_dot_product/: CMakeLists.txt  _index.md  accera_naive.cpp  config.hpp  cpp_naive.cpp  cpp_naive.md  cpp_simd_openmp.cpp  cpp_simd_openmp.md  cpp_simd_xsimd.cpp  cpp_simd_xsimd.md  fused.md  matmul.py  naive.md  naive.py  robocode_naive.cpp
src/scaled_dot_product_attention/: CMakeLists.txt  cpp_naive.cpp  naive.py  np.py  numpy.py  python.py  robocode_naive.cpp
src/softmax/: CMakeLists.txt  _index.md  accera_naive.cpp  accera_vectorized.cpp  accera_vectorized_2.cpp  config.hpp  cpp_naive.cpp  cpp_naive.md  cpp_simd_openmp.cpp  cpp_simd_openmp.md  cpp_simd_xsimd.cpp  cpp_simd_xsimd.md  cpp_xtensor.cpp  cpp_xtensor.md  main.cpp  naive.md  naive.py  python.py  pytorch.cpp  robocode_naive.cpp  robocode_vectorized.cpp  robocode_vectorized2.cpp  robocode_vectorized_2.cpp  vectorized.md  vectorized.py  vectorized_2.md  vectorized_2.py
src/softmax_twopass/: _index.md  python.py
src/transformer/: config.hpp
src/utils/: random.hpp  utils.hpp
utils/: random.hpp  utils.hpp
